fix: mobile horizontal overflow issue

--- a/style.css
+++ b/style.css
@@ -716,9 +716,7 @@ footer p{
     .section-title {
         margin-bottom: 10px;
     }
-   .about-content h3{
-        font-size: medium;
-    }
+
 .section-title p{
     display:none;
 }
